--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-      "nick": "admin",
+      "nick": "gem13",
       "server_ip": "127.0.0.1",
-      "server_port": "5555"
+      "server_port": "2121"
 }
